--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -32,6 +32,9 @@ jobs:
         run: |
           npm i -g corepack
           yarn install
+      - name: Run npm install
+        run: |
+          npm install
       - name: Build application
         run: |
           cd ./android
